# GEPA

./: .gitignore  CODE_WALKTHROUGH_ZH.md  README.md  pyproject.toml
configs/: experiment.yaml  v5_rules_example.yaml
scripts/: experiment_configs.py  launch_api_budget_v5_rules_20260615.py  local_qwen.py  run_experiments.py  run_hybrid_memory_judge.py
src/gepa_artifact/benchmarks/: README.md  benchmark.py  dspy_program.py
src/gepa_artifact/benchmarks/AIME/: AIME_data.py  AIME_program.py  __init__.py
src/gepa_artifact/benchmarks/IFBench/: __init__.py  ifbench_data.py  ifbench_metric.py  ifbench_program.py
src/gepa_artifact/benchmarks/IFBench/utils_ifbench/: instructions.py  instructions_ifeval.py  instructions_registry.py  (+3 more)
src/gepa_artifact/benchmarks/hotpotQA/: __init__.py  hotpot_data.py  hotpot_program.py
src/gepa_artifact/benchmarks/hover/: __init__.py  hover_data.py  hover_program.py  hover_utils.py
src/gepa_artifact/benchmarks/livebench_math/: __init__.py  livebenchmath_data.py  livebenchmath_program.py
src/gepa_artifact/benchmarks/papillon/: __init__.py  papillon_data.py  papillon_program.py  papillon_utils.py
src/gepa_artifact/gepa/: entropy_utils.py  gepa.py  gepa_utils.py  instruction_proposal.py  judge_memory.py  judge_selection.py  merge_programs.py
src/gepa_artifact/utils/: arbor_runner.py  capture_stream_logger.py  json_default_encoder.py  metric_logger.py  optimizers.py
src/gepa_core/: __init__.py  accounting.py  adapters.py  artifact_backend.py  budgets.py  cli.py  config.py  judge.py  memory.py  runner.py  strategies.py  validation.py
(+5 files in other folders)
