[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gepa"
version = "0.1.0"
description = "Standalone GEPA experiment runner with validation decay and LLM-judge strategies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "adjustText>=1.3.0",
  "bm25s==0.2.12",
  "datasets>=3.6.0",
  "diskcache>=5.6.0",
  "dspy>=2.6.23,<2.7",
  "emoji>=2.14.0",
  "evaluate>=0.4.3",
  "immutabledict>=4.2.1",
  "langdetect>=1.0.9",
  "lark>=1.2.2",
  "Levenshtein>=0.25.0",
  "math-verify==0.6.0",
  "matplotlib>=3.10.0",
  "nltk>=3.9.1",
  "numpy>=1.26.0",
  "pystemmer==2.2.0.3",
  "python-dotenv>=1.1.0",
  "PyYAML>=6.0.1",
  "sacrebleu>=2.5.1",
  "seaborn>=0.13.0",
  "spacy>=3.8.0",
  "syllapy>=0.7.2",
  "sympy>=1.13.0",
  "tabulate>=0.9.0",
  "torch>=2.0.0",
  "tqdm>=4.66.0",
  "ujson>=5.10.0",
  "unicodedata2>=16.0.0",
  "wandb>=0.19.0",
]

[project.scripts]
gepa-core = "gepa_core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gepa_core", "src/gepa_artifact"]
